# korali

./: .clang-format  .gitignore  .gitmodules  .style.yapf  AUTHORS  Makefile  README.md  RELEASE-NOTES  VERSION  common.mk  configure  install  mdev.py  run_tests.sh  setup.py
.circleci/: config.yml
doc/: Doxyfile
docker/: Dockerfile  build.sh  deploy.sh  remove.sh  run.sh
docs/: .gitignore  RELEASE-NOTES  build.sh  deploy.sh  doxygen.config  mkdocs._yml  mkdocs.yml
examples/: .gitignore  .run_test.sh  README.rst
examples/study.cases/covid19/: .gitignore  .run_test.sh  CMakeLists.txt  README.rst  install_prereqs.sh  main.py  matplotlibrc  plot  plot_intervals.py  plot_intervals_infected.py  run  testDefault.sh
examples/study.cases/covid19/src/cpp/: bindings.cpp  sir.cpp  sir.h
examples/study.cases/covid19/src/model/sir/: intervals.py  propagate.py  sample.py  sir.py
examples/study.cases/covid19/src/tools/: tools.py
features/: .run_test.sh  README.rst
hTest/: init.py  init.sh  run-tmcmc.py
include/: auxiliar.h  base.h  cmaes.h  distribution.h  korali.h  model.h  parameter.h  prior.h  problem.h  solver.h  tmcmc.h  tmcmc_types.h  tmcmc_utils.h  variable.h
prereqs/: .gitignore  install_CMake.sh  install_clang.sh  install_doxygen.sh  install_gsl.sh  install_oneDNN.sh
python/: __init__.py
source/: .gitignore  .setup.py  .variable.cpp  .variable.hpp  Makefile  __init__.py  auxiliar.cpp  auxiliar.hpp  auxiliar.py  base.cpp  build.py  buildAux.py  buildKorali.py  buildSolvers.py  buildVariables.py  build_config.py  cmaes.cpp  common.mk  config.cpp  (+25 more)
(+3336 files in other folders)
